[gd_scene load_steps=9 format=2]

[ext_resource path="res://Texture/dialog box.png" type="Texture" id=1]
[ext_resource path="res://Texture/dialog name.png" type="Texture" id=2]
[ext_resource path="res://Script/Dialog.gd" type="Script" id=3]
[ext_resource path="res://Texture/next_animated.png" type="Texture" id=4]
[ext_resource path="res://Texture/Fonts/ZenOldMincho-Black.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="Dialog" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="NinePatchRect" parent="."]
margin_left = 220.0
margin_top = 368.0
margin_right = 820.0
margin_bottom = 528.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogText" type="RichTextLabel" parent="DialogBox"]
margin_left = 80.0
margin_top = 56.0
margin_right = 464.0
margin_bottom = 128.0
custom_fonts/normal_font = SubResource( 1 )
text = "Hello There"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameBox" type="NinePatchRect" parent="DialogBox"]
margin_left = 14.0
margin_top = 16.0
margin_right = 114.0
margin_bottom = 46.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameText" type="RichTextLabel" parent="DialogBox/NameBox"]
margin_left = 12.0
margin_top = 3.0
margin_right = 89.0
margin_bottom = 26.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Jack[/center]"
text = "Jack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next" type="Sprite" parent="DialogBox"]
position = Vector2( 540, 120 )
texture = ExtResource( 4 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogBox/next"]
anims/idle = SubResource( 3 )

[node name="Tween" type="Tween" parent="DialogBox"]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
